@@ -4284,6 +4284,12 @@ $wgReservedUsernames = array(
 );
 
 /**
+ * Whether to provide a neutral gender option in the user preferences (in addition to
+ * male, female, and unknown).
+ */
+$wgNeutralGenderOption = false;
+
+/**
  * Settings added to this array will override the default globals for the user
  * preferences used by anonymous visitors and newly created accounts.
  * For instance, to disable editing on double clicks:
